# autoencoder

./: .gitignore  LICENSE  README.md  activations.py  autoencoder.py  layers.py  mnist_test.py  pyproject.toml  requirements.txt  utils.py
examples/: mnist_test.py
src/easyvae/: autoencoder.py  layers.py  plotters.py  utils.py
